--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -2,6 +2,7 @@ html, body{
   margin: 0;
   padding: 0;
   width: 100%;
+  min-width: 1024px;
   height: 100%;
   color: #666;
   font: 12px/1.4 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
