--- a/src/components/signin/index.scss
+++ b/src/components/signin/index.scss
@@ -10,8 +10,8 @@
   height: 100%;
   background: rgba(41, 26, 26, 0.72);
   z-index: 999;
-
-  .box{
+  
+  .form{
     position: absolute;
     top: 0;
     right: 0;
@@ -25,6 +25,39 @@
     box-shadow: 0 0 1rem #333;
     background: #fff;
     border-radius: 4px;
+
+    .closed{
+      opacity: 0;
+      transform: scale(.8);
+    }
+  }
+
+  .closeMenu{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 3.2rem;
+    height: 3.2rem;
+    cursor: pointer;
+
+    &:before, &:after{
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      width:70%;
+      height: 2px;
+      background: $baseColor;
+      border-radius: 4px;
+      transform: rotate(45deg);
+    }
+
+    &:after{
+      transform: rotate(-45deg);
+    }
   }
 
   h1, h2{
@@ -46,6 +79,14 @@
     margin: 2.4rem 0;
     height: 2.4rem;
 
+    &.warning{
+      margin-bottom: 0;
+      color: $baseColor;
+      text-align: center;
+      line-height: 2.4rem;
+      background: #fbfbbf;
+    }
+
     label{
       position: absolute;
       left: 0;
@@ -56,6 +97,11 @@
       font-size: 1.2rem;
       color: #bbb;
       transition: all .32s ease;
+
+      &.active{
+        font-size: 12px;
+        transform: translateY(-1.8rem);
+      }
     }
 
     span{
@@ -68,6 +114,7 @@
       opacity: 0;
       transform: scaleX(0);
       transition: transform .32s ease;
+      z-index: 100;
     }
   }
 
@@ -80,16 +127,11 @@
     border-bottom: 1px solid #bbb;
     outline: none;
     background: transparent;
+    box-sizing: border-box;
     z-index: 99;
 
-    &:focus{
-      border-color: transparent;
-      transition-delay: .3s;
-    }
-
     &:focus ~ label{
-      font-size: 12px;
-      transform: translateY(-1.8rem);
+      @extend label.active;
     }
 
     &:focus ~ span{
@@ -107,11 +149,33 @@
     border-radius: 4px;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     background: $baseColor;
+    cursor: pointer;
     outline: none;
+
+    i{
+      display: inline-block;
+      font-size: 1.8rem;
+
+      animation: loading 2s ease infinite;
+    }
 
     &:active{
       background: #b90909;
       box-shadow: 0 .4rem .6rem #888;
     }
+  }
+}
+
+.hide{
+  display: none;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
