time to back school :school:

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -6,7 +6,7 @@ html, body{
   min-width: 1024px;
   height: 100%;
   color: #666;
-  font: 12px/1.4 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 12px/1.4 "Open Sans", Helvetica, Arial, sans-serif;
 }
 
 a{
