--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -24,7 +24,6 @@ header{
   float: left;
   height: 100%;
   font-size: 1.4rem;
-  font-family: monospace;
   user-select: none;
   cursor: default;
 
@@ -90,6 +89,40 @@ header{
       border-bottom: .1rem solid $baseColor;
     }
   }
+}
+
+.user{
+  position: relative;
+  margin-left: 1rem;
+  float: right;
+  width: 4rem;
+  text-align: right;
+
+  img{
+    width: 2.4rem;
+    height: 2.4rem;
+    border-radius: 4px;
+    vertical-align: middle;
+  }
+
+  // .info{
+  //   position: absolute;
+  //   right: 0;
+  //   top: 80%;
+  //   width: 6rem;
+  //   height: 10rem;
+  //   box-shadow: 0 0 .6rem #aaa;
+  //   border-radius: 4px;
+  //   background: #fff;
+  //   opacity: 0;
+  //   transform: translateY(2rem);
+  //   transition: all .32s ease;
+  // }
+
+  // &:hover .info{
+  //   opacity: 1;
+  //   transform: translateY(0);
+  // }
 }
 
 
